--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,7 +82,7 @@ jobs:
       run: |
         # There seems to be no easy way to install dependencies
         # from pyproject.toml, so we just install the package...
-        pip install -e .[test]
+        pip install -e .[login,test]
         #pip install coverage[toml] pytest pytest-cov
     - name: Prepare test configuration
       run: |
