--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,11 @@ addopts = "--cov --cov-report html --cov-report xml --cov-append"
 source = ["src"]
 branch = true
 
+[tool.coverage.report]
+exclude_also = [
+    "def __repr__",
+    "if TYPE_CHECKING:",
+    "@(abc\\.)?abstractmethod"
+]
+
+
