--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 keywords = ["ipernity", "photo", "web"]
 dependencies = [
     "Flask",
-    "PyIpernity",
+    "PyIpernity>=0.1.5",
 ]
 requires-python = ">=3.8"
 dynamic = ["version"]
