--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,20 @@ authors = [
     { name = "rcw-2", email = "mail@rcw-2.de" }
 ]
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 3 - Alpha",
     "Environment :: Web Environment",
     "Framework :: Flask",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Topic :: Internet :: WWW/HTTP :: WSGI",
     "Topic :: Multimedia :: Graphics",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 keywords = ["ipernity", "photo", "web"]
 dependencies = [
     "Flask",
-    "PyIpernity>=0.1.5",
+    "PyIpernity>=0.2",
 ]
 requires-python = ">=3.8"
 dynamic = ["version"]
